# unified-physicsformer-engine

./: API_REFERENCE.md  ARCHITECTURE.md  COLLISION_CONTACT_FRICTION.md  COLLISION_VISUALIZATION_STATUS.md  COMPLETE_SYSTEM.md  COMPLETION_CHECKLIST.md  FINAL_SUMMARY.txt  GETTING_STARTED.md  IMPLEMENTATION_CHECKLIST.md  INTEGRATION_GUIDE.md  PHYSICSFORMER_COMPLETE.md  PHYSICSFORMER_README.md  PHYSICS_CONSTRAINTS.md  PHYSICS_CONSTRAINTS_SUMMARY.md  PROJECT_STRUCTURE.md  README_DOCS.md  TASK_COMPLETION_REPORT.md  demo_collisions.py  demo_physics_constraints.py  demo_physicsformer.py  pyproject.toml  train.py
configs/: burgers.yaml  elasticity.yaml
engine/: __init__.py  collision_handler.py  config.py  model.py  physics_aware_trainer.py  physics_constraints.py  physics_data.py  physicsformer.py  sampler.py  synthetic_data.py  trainer.py  trainer_former.py  visualization.py
pdes/: burgers.py
tests/: test_burgers.py  test_collisions.py  test_config.py  test_model.py  test_physicsformer.py
